In development:
	* User nick is moved to the right top on the profile page
	* Bug with automatic Twic authorization on the pages for another applications is fixed

0.17:
	* New tweet editor is now smaller on blur
	* "Insert link" button is now disabled if we can't do it
	+ Displaying the tweet time (optional, disabled by default)
	+ Displaying the user Twitter client in tweet (optional, disabled by default)
	+ Settings button on the first page
	- Donate button
	+ Additional "locked" icon in protected user profiles
	* Retweet button is disabled for the protected user tweets
	* Additional tweet info is hidden while replying

0.16:
	* Fix for the urls without protocol (thanks @Stammru)
	+ Separator between unread and old tweets

0.15:
	* Fix for the error message is not showing

0.14:
	+ Error message if extension can't add a new account
	+ Open the new not focused tab with middle button mouse click (or with metaKey + click in MacOS)
	* Popup resized from 350px to 400px in width
	+ Foursquare links are looks like an icon now
	* Hope bug with horizontal scroll on Windows with bigger fonts is fixed
	+ Button to insert the current page link into the tweet
	+ Options page
	+ Ability to change the avatar size in the home timeline

0.13:
	+ Reply to all with ctrl+click on reply button
	+ Old-style retweets with ctrl+click on retweet button
	- Reverted the popup autoheight function, for now I can't find the solution for this problem

0.12
	+ Link from static map image in profile to the google maps in new tab
	* "About" page icon changed
	* Bug with new Twitter authorization page is fixed

0.10 - 0.11
	* Home timeline max height bug is fixed (thanks @chakrygin)

0.9
	* Fixing cursor for tweet buttons in Mac OS
	* Extension popup now can't be larger than screen height
	* No more lowercased usernames
	* Fixing small authentication bug with retry

0.8
	* Critical fix for reply button

0.7
	+ Reply
	* No full timeline repaint on new tweet post
	+ Tweets delete and undo retweets